fixed overflowing rules that breaks UI layout

--- a/chromium/pages/options/options.css
+++ b/chromium/pages/options/options.css
@@ -88,14 +88,14 @@ i {
     border-width: 1px;
     display: grid;
     grid-auto-rows: 25px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 33.33%);
     max-height: 125px;
     min-height: 50px;
     overflow-y: scroll;
 }
 
 .listx {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 20%);
     height: 59px;
 }
 
